Bug 393372 - kopete-18.04.0: build error: invalid use of incomplete type ‘class Buffer’
Summary: kopete-18.04.0: build error: invalid use of incomplete type ‘class Buffer’
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-21 14:57 UTC by Andreas Sturmlechner
Modified: 2018-05-12 05:04 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04.1
Sentry Crash Report:


Attachments
build.log.gz (43.00 KB, application/gzip)
2018-04-21 14:57 UTC, Andreas Sturmlechner
Details
Build log of kopete 18.04.0 evidencing further compilation errors (40.76 KB, application/x-gzip)
2018-04-24 20:31 UTC, Eric Hameleers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2018-04-21 14:57:15 UTC
Created attachment 112157 [details]
build.log.gz

Famous last words:

kopete-18.04.0_build/protocols/oscar/liboscar/oscar_autogen/4YFCYKDWW7/moc_messagereceivertask.cpp:83:165: error: invalid use of incomplete type ‘class Buffer’
 _t->fileMessage((*reinterpret_cast< int(*)>(_a[1])),(*reinterpret_cast< const QString(*)>(_a[2])),(*reinterpret_cast< const QByteArray(*)>(_a[3])),(*reinterpret_cast< Buffer(*)>(_a[4]))); break;
                                                                                                                                                    ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Comment 1 Rex Dieter 2018-04-21 21:27:38 UTC
liboscar fails to build with same error on fedora (27)
Comment 2 Eric Hameleers 2018-04-22 11:48:16 UTC
Exact same issue here on Slackware, using KDE Frameworks 5.45.0, Plasma 5.12.4 and Applications 18.04.0 on top of Qt 5.9.5.
Comment 3 Pino Toscano 2018-04-24 04:31:31 UTC
Git commit b1f4fa1401cba2e359e5a4b3ea2bafd119fca62b by Pino Toscano.
Committed on 24/04/2018 at 04:30.
Pushed by pino into branch 'Applications/18.04'.

oscar: include buffer.h

This header uses Buffer as by-value parameter, so make sure it knows
about it.
FIXED-IN: 18.04.1

M  +1    -0    protocols/oscar/liboscar/tasks/messagereceivertask.h

https://commits.kde.org/kopete/b1f4fa1401cba2e359e5a4b3ea2bafd119fca62b
Comment 4 Eric Hameleers 2018-04-24 20:31:37 UTC
Created attachment 112222 [details]
Build log of kopete 18.04.0 evidencing further compilation errors
Comment 5 Eric Hameleers 2018-04-24 20:33:03 UTC
The patch solves one occurrence of build failure but uncovers further errors.
Comment 6 Rex Dieter 2018-04-24 21:41:57 UTC
/tmp/kde_build/applications/kopete-18.04.0/protocols/wlm/ui/wlmeditaccountwidget.cpp:211:18: error: ‘queuedMessageBox’ is not a member of ‘KMessageBox’

msn messenger is dead and deprecated for a long time, <nod>, this support ought to be removed/disabled.

In the meantime, building with
-DWITH_wlm:BOOL=OFF
is a workaround I use.
Comment 7 Pino Toscano 2018-04-25 04:01:02 UTC
This specific issue, i.e. the build failure in the oscar protocol, was fixed -- hence closing.

As Rex said, wlm is dead for a long time already, and even libmsn is not useful anymore now. Just stop building wlm in kopete, and drop libmsn from slackware.
Comment 8 Pino Toscano 2018-05-12 05:04:13 UTC
https://phabricator.kde.org/D12530 removes the WLM prootocol in >= 18.04.2.