oscar: include buffer.h

This header uses Buffer as by-value parameter, so make sure it knows
about it.

BUG: 393372
FIXED-IN: 18.04.1